# codex-telegram-bot

./: .gitignore  AGENTS.md  LICENSE  README.md  TEST_IMPROVEMENTS.md  config.example.yaml  pyproject.toml
docs/plans/: 2026-02-13-codex-app-server-backend.md
src/tgcodex/: cli.py  config.py  constants.py  daemon.py
src/tgcodex/bot/: app.py  auth.py  callbacks.py  commands.py  formatting.py  output_stream.py  sessions_ui.py
src/tgcodex/codex/: adapter.py  app_server_backend.py  app_server_rpc.py  approvals.py  cli_runner.py  command_intent.py  events.py  mcp.py  models_cache.py  sessions.py  skills.py
src/tgcodex/machines/: base.py  local.py  paths.py  ssh.py
src/tgcodex/state/: migrations.py  models.py  store.py
src/tgcodex/util/: shlex_tokens.py  text.py  time.py
src/tgcodex_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_adapter.py  test_approvals.py  test_bot_app_commands.py  test_bot_nonblocking.py  test_cli_runner_approvals.py  test_cli_setup_wizard.py  test_cli_start_stop.py  test_command_intent.py  test_config_validation.py  test_daemon.py  test_daemon_process.py  test_daemon_start.py  test_daemon_stop.py  test_events.py  test_formatting.py  test_local_machine_process_group.py  test_output_stream.py  test_paths.py  test_plan_mode.py  test_proxy_approval_flow.py  test_sessions.py  test_sessions_ui.py  test_skills.py  test_store_telemetry.py
